--- a/index.html
+++ b/index.html
@@ -239,10 +239,27 @@ Intro Section
         <i class="icon fa fa-check-circle second"></i>
         <h4 class="title"><a href="20/final.html">Финал VIII Национального чемпионата 2020</a></h4>
     </div>
-</div>                    <div class="col-lg-6">
+</div>                <div class="col-lg-6">
     <div class="box wow fadeInRight">
         <i class="icon fa fa-check-circle first"></i>
         <h4 class="title"><a href="20/rch.html">Региональный чемпионат в РТ 2020</a></h4>
+    </div>
+</div>
+                <div class="col-lg-6">
+    <div class="box wow fadeInLeft">
+        <i class="icon fa fa-check-circle second"></i>
+        <h4 class="title"><a href="21/final.html">Финал IX Национального чемпионата 2021</a></h4>
+    </div>
+</div>                <div class="col-lg-6">
+    <div class="box wow fadeInRight">
+        <i class="icon fa fa-check-circle first"></i>
+        <h4 class="title"><a href="21/ds.html">Национальный чемпионат DigitalSkills 2021</a></h4>
+    </div>
+</div>
+                <div class="col-lg-6">
+    <div class="box wow fadeInLeft">
+        <i class="icon fa fa-check-circle first"></i>
+        <h4 class="title"><a href="21/rch.html">Региональный чемпионат в РТ 2021</a></h4>
     </div>
 </div>            </div>
         </div>
